tests/ui/fail/fn-missing-output-03.rs
fn main() {}

#[union_fn::union_fn]
trait Foo {
    type Output = i32;

    fn foo() -> Self::Output {}
    fn bar() -> i32 {}
}
